<resources>
    <string name="app_name">MyService</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">上一首</string>
    <string name="next">下一首</string>
    <string name="unbind_service">unbindService</string>
</resources>
