<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.issac.administrator.myservice.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            android:id="@+id/startService"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_service"
            android:id="@+id/stopService"
            android:layout_below="@+id/startService"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bind_service"
            android:id="@+id/bindService"
            android:layout_below="@+id/stopService"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/play"
            android:layout_below="@+id/bindService"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/pause"
            android:layout_below="@+id/play"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/previous"
            android:layout_below="@+id/pause"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next"
            android:layout_below="@+id/previous"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unbind_service"
            android:id="@+id/unbindService"
            android:layout_below="@+id/next"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="doClick"/>
        </RelativeLayout>
    </ScrollView>




</RelativeLayout>
